--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@supabase/supabase-js": "^2.48.1",
     "@types/navermaps": "^3.7.8",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
