♻️ 크루등록 개선

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/navermaps": "^3.7.8",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
