--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
     "vaul": "^1.1.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "html2canvas": "^1.4.1",
+    "@types/html2canvas": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
