--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@supabase/supabase-js": "^2.48.1",
+    "@types/html2canvas": "^1.0.0",
     "@types/navermaps": "^3.7.8",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
@@ -47,6 +48,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "^14.2.23",
@@ -64,8 +66,7 @@
     "uuid": "^11.0.3",
     "vaul": "^1.1.2",
     "zod": "^3.24.1",
-    "html2canvas": "^1.4.1",
-    "@types/html2canvas": "^1.0.0"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
