--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "input-otp": "^1.4.1",
     "lucide-react": "^0.469.0",
     "next": "^14.2.23",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-day-picker": "^9.0.0",
